agregue la matriz de transicion de genero

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /ProyectoFinalAnalisis_alejo/analisis1-master/analisis1-master/ProyectoAnalisis_jhonier/build/
 /ProyectoFinalAnalisis_alejo/analisis1-master/analisis1-master/ProyectoAnalisis_jhonier/dist/
 /ProyectoFinalAnalisis_alejo/analisis1-master/analisis1-master/ProyectoAnalisis_jhonier/nbproject/private/
+/ProyectoFinalAnalisis_alejo/dist/
