--- a/ProyectoFinalAnalisis_alejo/nbproject/project.properties
+++ b/ProyectoFinalAnalisis_alejo/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProyectoFinalAnalisis.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.AbsoluteLayout.jar=..\\ProyectoAnalisis_jhonier\\dist\\lib\\AbsoluteLayout.jar
 file.reference.cmu_time_awb.jar=lib\\cmu_time_awb.jar
 file.reference.cmu_us_kal.jar=lib\\cmu_us_kal.jar
 file.reference.cmudict04.jar=lib\\cmudict04.jar
@@ -35,6 +36,8 @@ file.reference.cmutimelex.jar=lib\\cmutimelex.jar
 file.reference.en_us.jar=lib\\en_us.jar
 file.reference.freetts-jsapi10.jar=lib\\freetts-jsapi10.jar
 file.reference.freetts.jar=lib\\freetts.jar
+file.reference.jgoodies-common-1.7.0.jar=..\\ProyectoAnalisis_jhonier\\dist\\lib\\jgoodies-common-1.7.0.jar
+file.reference.jgoodies-looks-2.5.3.jar=..\\ProyectoAnalisis_jhonier\\dist\\lib\\jgoodies-looks-2.5.3.jar
 file.reference.mbrola.jar=lib\\mbrola.jar
 includes=**
 jar.compress=false
@@ -47,7 +50,10 @@ javac.classpath=\
     ${file.reference.en_us.jar}:\
     ${file.reference.freetts-jsapi10.jar}:\
     ${file.reference.freetts.jar}:\
-    ${file.reference.mbrola.jar}
+    ${file.reference.mbrola.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.jgoodies-common-1.7.0.jar}:\
+    ${file.reference.jgoodies-looks-2.5.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
